Fully working version with signed FIT image

--- a/configs/rpi3_defconfig
+++ b/configs/rpi3_defconfig
@@ -7,6 +7,9 @@ BR2_TOOLCHAIN_EXTERNAL_LINARO_AARCH64=y
 BR2_SYSTEM_DHCP="eth0"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/post-image.sh"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/rootfs-overlay"
+BR2_TARGET_GENERIC_ROOT_PASSWD="root"
+BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/device_table.txt"
 
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
@@ -16,8 +19,9 @@ BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi3"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/configs/linux_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="broadcom/bcm2710-rpi-3-b"
-BR2_PACKAGE_RPI_FIRMWARE=y
+# BR2_PACKAGE_RPI_FIRMWARE is not set
 # BR2_PACKAGE_RPI_FIRMWARE_INSTALL_DTB_OVERLAYS is not set
+BR2_PACKAGE_RPI_WIFI_FIRMWARE=y
 
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_E2FSPROGS=y
@@ -26,24 +30,20 @@ BR2_PACKAGE_HOST_MTOOLS=y
 
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_NANO=y
-
-BR2_TARGET_UBOOT=y
-BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
-BR2_TARGET_UBOOT_CUSTOM_GIT=y
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/linaro-swg/u-boot.git"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="bc6d93cf5eee9fc979a7c5141ff6312bed2835a2"
-BR2_TARGET_UBOOT_USE_DEFCONFIG=y
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="rpi_3"
-BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/configs/uboot_defconfig"
-BR2_TARGET_UBOOT_NEEDS_DTC=y
-BR2_TARGET_UBOOT_NEEDS_OPENSSL=y
-BR2_TARGET_UBOOT_ENVIMAGE=y
-BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/uboot.env.txt"
-BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x4000"
-
-BR2_PACKAGE_HOST_UBOOT_TOOLS=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
-BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_PACKAGE_MC=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_NTPDATE=y
 
 BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/local.mk"
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/patches"
+
+BR2_PACKAGE_OPTEE_OS=y
+BR2_PACKAGE_OPTEE_OS_64BIT=y
+BR2_PACKAGE_OPTEE_OS_PLATFORM="rpi3"
+
+BR2_PACKAGE_UBOOT_RPI3=y
+BR2_PACKAGE_UBOOT_RPI3_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/uboot.env.txt"
+BR2_PACKAGE_UBOOT_RPI3_ENVIMAGE_SIZE="0x4000"
+BR2_PACKAGE_UBOOT_RPI3_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/configs/uboot_defconfig"
+
+BR2_PACKAGE_RPI3_FIRMWARE=y
