Add getty to primary console output

--- a/configs/rpi3_defconfig
+++ b/configs/rpi3_defconfig
@@ -45,3 +45,12 @@ BR2_PACKAGE_UBOOT_RPI3_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rp
 BR2_PACKAGE_UBOOT_RPI3_ENVIMAGE_SIZE="0x4000"
 
 BR2_PACKAGE_RPI3_FIRMWARE=y
+
+BR2_GENERATE_LOCALE="en_US.UTF-8"
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_LOCALTIME="Europe/Budapest"
+
+BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
+BR2_TARGET_GENERIC_GETTY_TERM="vt100"
+
+BR2_PACKAGE_NCURSES_WCHAR=y
