Remove default include from arm-tf package

--- a/configs/rpi3_defconfig
+++ b/configs/rpi3_defconfig
@@ -54,3 +54,5 @@ BR2_TARGET_GENERIC_GETTY_PORT="ttyS0"
 BR2_TARGET_GENERIC_GETTY_TERM="vt100"
 
 BR2_PACKAGE_NCURSES_WCHAR=y
+
+BR2_PACKAGE_ARM_TF=y
