Modify optee-* packages
Remove default includes
Use github call for site

--- a/configs/rpi3_defconfig
+++ b/configs/rpi3_defconfig
@@ -39,6 +39,9 @@ BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/local.mk"
 BR2_PACKAGE_OPTEE_OS=y
 BR2_PACKAGE_OPTEE_OS_64BIT=y
 BR2_PACKAGE_OPTEE_OS_PLATFORM="rpi3"
+BR2_PACKAGE_OPTEE_CLIENT=y
+BR2_PACKAGE_OPTEE_EXAMPLES=y
+BR2_PACKAGE_OPTEE_TEST=y
 
 BR2_PACKAGE_UBOOT_RPI3=y
 BR2_PACKAGE_UBOOT_RPI3_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_RPI3_OPTEE_PATH)/board/rpi3/uboot.env.txt"
