--- a/package/optee-test/Config.in
+++ b/package/optee-test/Config.in
@@ -1,16 +1,7 @@
 config BR2_PACKAGE_OPTEE_TEST
 	bool "optee-test"
 	select BR2_PACKAGE_OPTEE_CLIENT
-	default "y"
+	select BR2_PACKAGE_OPENSSL
+	select BR2_PACKAGE_PYTHON_PYCRYPTO
 	help
 	  http://github.org/OP-TEE/optee_test
-
-if BR2_PACKAGE_OPTEE_TEST
-
-config BR2_PACKAGE_OPTEE_TEST_SITE
-	string "OP-TEE test path"
-	default "git://github.com/OP-TEE/optee_test.git"
-	help
-	  The path to the source directory of OP-TEE test
-
-endif
